# menu-mvp

./: .env  .gitignore  README.md  alembic.ini  langgraph.json  menu-mvp.code-workspace  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 5f2e3f4a739d_align_with_fastapi_structure.py  85544f481e8c_align_with_fastapi_structure.py
api/: main.py
api/core/: config.py  llm_clients.py  supabase_client.py
api/my_agent/: agent.py
api/my_agent/utils/: nodes.py
api/routers/: chat.py  ingredient.py  recipe_router.py
api/schemas/: chat.py  llm.py  recipe_schema.py
api/services/: ingredient_service.py  llm_factory.py  recipe_service.py
api/utils/: logger.py
app/: app.py  utils
app/pages/: Ingredients.py  Planejamento.py  Recipes.py  Upload_PDF.py
src/api/: main.py
src/api/core/: config.py  llm_clients.py
src/api/my_agent/: agent.py
src/api/my_agent/utils/: nodes.py
src/api/routers/: plan.py  recipes.py
src/api/services/: pdf_parser.py  recipe_generator.py
src/api/utils/: llm_factory.py  logger.py  visualize_graph.py
src/app/: app.py
