[tool.poetry]
name = "menu-mvp"
version = "0.1.0"
description = ""
authors = ["aime-n <aime.nobrega@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
    { include = "api" }
]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.115.0"
streamlit = "^1.45.0"
langgraph = "^0.4.8"
langchain-openai = "^0.3.23"
httpx = "^0.28.1"
sqlmodel = "^0.0.24"
alembic = "^1.16.1"
python-dotenv = "^1.1.0"
uvicorn = "^0.34.3"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
